src/objects/TR1__Rates_Mapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Used on Calculator</description>
    <fields>
        <fullName>TR1__Currency__c</fullName>
        <label>Rates Mapping</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Field_Name_Rate_Percentage__c</fullName>
        <description>Field API Name which will store Rate Percentage</description>
        <label>Field Name (Rate Percentage)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Field_Name__c</fullName>
        <label>Field Name (Rate Amount)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Operation__c</fullName>
        <description>Acc:W-008782-Add ACA fee to bill cost.</description>
        <label>Operation</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Order__c</fullName>
        <label>Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TR1__Rate_Percent__c</fullName>
        <label>Rate Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Rates Mapping</label>
</CustomObject>